--- a/notebooks/5_2_binary_dl_foot_to_ground_classification.ipynb
+++ b/notebooks/5_2_binary_dl_foot_to_ground_classification.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:29.683311Z",
-     "start_time": "2021-03-05T09:18:29.660279Z"
+     "end_time": "2021-03-11T14:11:48.791631Z",
+     "start_time": "2021-03-11T14:11:45.994299Z"
     }
    },
    "outputs": [],
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:29.842276Z",
-     "start_time": "2021-03-05T09:18:29.826279Z"
+     "end_time": "2021-03-11T14:11:48.807631Z",
+     "start_time": "2021-03-11T14:11:48.793632Z"
     }
    },
    "outputs": [],
@@ -36,11 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:29.970280Z",
-     "start_time": "2021-03-05T09:18:29.965288Z"
+     "end_time": "2021-03-11T14:11:48.838633Z",
+     "start_time": "2021-03-11T14:11:48.812634Z"
     }
    },
    "outputs": [],
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:44.197887Z",
-     "start_time": "2021-03-05T09:18:30.254908Z"
+     "end_time": "2021-03-11T14:12:02.697052Z",
+     "start_time": "2021-03-11T14:11:48.842635Z"
     }
    },
    "outputs": [],
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:45.147806Z",
-     "start_time": "2021-03-05T09:18:44.200799Z"
+     "end_time": "2021-03-11T14:12:03.822063Z",
+     "start_time": "2021-03-11T14:12:02.702063Z"
     }
    },
    "outputs": [],
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:45.243795Z",
-     "start_time": "2021-03-05T09:18:45.150800Z"
+     "end_time": "2021-03-11T14:12:03.967057Z",
+     "start_time": "2021-03-11T14:12:03.824056Z"
     }
    },
    "outputs": [
@@ -516,7 +516,7 @@
        "4     2.64 -0.003272 -0.001091  0.000000               0.0                0.0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,11 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:45.290806Z",
-     "start_time": "2021-03-05T09:18:45.246801Z"
+     "end_time": "2021-03-11T14:12:04.044055Z",
+     "start_time": "2021-03-11T14:12:03.977058Z"
     }
    },
    "outputs": [],
@@ -542,11 +542,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:45.321807Z",
-     "start_time": "2021-03-05T09:18:45.294800Z"
+     "end_time": "2021-03-11T14:12:04.075058Z",
+     "start_time": "2021-03-11T14:12:04.047056Z"
     }
    },
    "outputs": [
@@ -574,7 +574,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,11 +585,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.004795Z",
-     "start_time": "2021-03-05T09:18:45.323800Z"
+     "end_time": "2021-03-11T14:12:06.389054Z",
+     "start_time": "2021-03-11T14:12:04.083061Z"
     }
    },
    "outputs": [
@@ -1211,7 +1211,7 @@
        "max        1.000000e+00       1.000000e+00  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,11 +1222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.019800Z",
-     "start_time": "2021-03-05T09:18:47.007799Z"
+     "end_time": "2021-03-11T14:12:06.405055Z",
+     "start_time": "2021-03-11T14:12:06.393054Z"
     }
    },
    "outputs": [],
@@ -1238,11 +1238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.035804Z",
-     "start_time": "2021-03-05T09:18:47.024799Z"
+     "end_time": "2021-03-11T14:12:06.437056Z",
+     "start_time": "2021-03-11T14:12:06.410058Z"
     }
    },
    "outputs": [
@@ -1258,7 +1258,7 @@
        " 'appui_leve_gauche']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,11 +1269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.191802Z",
-     "start_time": "2021-03-05T09:18:47.039803Z"
+     "end_time": "2021-03-11T14:12:06.721056Z",
+     "start_time": "2021-03-11T14:12:06.441056Z"
     }
    },
    "outputs": [],
@@ -1284,11 +1284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.222800Z",
-     "start_time": "2021-03-05T09:18:47.193798Z"
+     "end_time": "2021-03-11T14:12:06.784057Z",
+     "start_time": "2021-03-11T14:12:06.725058Z"
     }
    },
    "outputs": [
@@ -1296,13 +1296,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-48-f2b7288daab8>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-13-f2b7288daab8>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_left_foot['foot_type'] = 0\n",
-      "<ipython-input-48-f2b7288daab8>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-13-f2b7288daab8>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1318,11 +1318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.239800Z",
-     "start_time": "2021-03-05T09:18:47.226813Z"
+     "end_time": "2021-03-11T14:12:06.821084Z",
+     "start_time": "2021-03-11T14:12:06.793058Z"
     }
    },
    "outputs": [
@@ -1345,11 +1345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.268797Z",
-     "start_time": "2021-03-05T09:18:47.248807Z"
+     "end_time": "2021-03-11T14:12:06.847055Z",
+     "start_time": "2021-03-11T14:12:06.829093Z"
     }
    },
    "outputs": [],
@@ -1360,11 +1360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.330802Z",
-     "start_time": "2021-03-05T09:18:47.273805Z"
+     "end_time": "2021-03-11T14:12:10.699920Z",
+     "start_time": "2021-03-11T14:12:10.665954Z"
     }
    },
    "outputs": [
@@ -1592,7 +1592,7 @@
        "[1109582 rows x 11 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,11 +1603,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.502797Z",
-     "start_time": "2021-03-05T09:18:47.334803Z"
+     "end_time": "2021-03-11T14:12:11.535163Z",
+     "start_time": "2021-03-11T14:12:11.397163Z"
     }
    },
    "outputs": [],
@@ -1617,11 +1617,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.674797Z",
-     "start_time": "2021-03-05T09:18:47.506805Z"
+     "end_time": "2021-03-11T14:12:13.410077Z",
+     "start_time": "2021-03-11T14:12:13.247079Z"
     }
    },
    "outputs": [
@@ -1633,7 +1633,7 @@
        "       'Madison', 'PencheAvant', 'DepBrasAvant_2'], dtype=object)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,11 +1644,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:47.692802Z",
-     "start_time": "2021-03-05T09:18:47.677802Z"
+     "end_time": "2021-03-11T14:12:13.663083Z",
+     "start_time": "2021-03-11T14:12:13.644079Z"
     }
    },
    "outputs": [],
@@ -1658,11 +1658,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:52.566258Z",
-     "start_time": "2021-03-05T09:18:47.716802Z"
+     "end_time": "2021-03-11T14:12:22.484151Z",
+     "start_time": "2021-03-11T14:12:17.099081Z"
     }
    },
    "outputs": [],
@@ -1672,11 +1672,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-05T09:18:53.316237Z",
-     "start_time": "2021-03-05T09:18:52.569234Z"
+     "end_time": "2021-03-11T14:12:24.186553Z",
+     "start_time": "2021-03-11T14:12:23.436559Z"
     }
    },
    "outputs": [],
@@ -1688,6 +1688,20 @@
     "    ],\n",
     "    axis=1\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T14:15:20.102542Z",
+     "start_time": "2021-03-11T14:14:33.530945Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_all.to_csv(\"../../Data/TRANSFORMED_DATA/lr_transformed_cea_data.csv\", index=False, header=True)"
    ]
   },
   {
