--- a/run_and_git_update.ipynb
+++ b/run_and_git_update.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "791875d0",
+   "id": "209a2ff3",
    "metadata": {},
    "outputs": [
     {
@@ -24,17 +24,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7d390f5",
+   "id": "423e40c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! git add ."
+    "! git add ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b1b12539",
+   "execution_count": 3,
+   "id": "51a1ef62",
    "metadata": {},
    "outputs": [
     {
@@ -44,51 +44,44 @@
       "On branch paper_code\n",
       "Your branch is up to date with 'origin/paper_code'.\n",
       "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "Changes to be committed:\n",
+      "  (use \"git reset HEAD <file>...\" to unstage)\n",
       "\n",
-      "\t\u001b[31mmodified:   requirements.txt\u001b[m\n",
-      "\t\u001b[31mmodified:   src/data/format_cea_data.py\u001b[m\n",
-      "\t\u001b[31mmodified:   src/main.py\u001b[m\n",
-      "\t\u001b[31mmodified:   src/training/model_training.py\u001b[m\n",
-      "\t\u001b[31mmodified:   src/training/neural_models.py\u001b[m\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\n",
-      "\t\u001b[31m.gitignore\u001b[m\n",
-      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\n",
-      "\t\u001b[31mUntitled.ipynb\u001b[m\n",
-      "\t\u001b[31msrc/.ipynb_checkpoints/\u001b[m\n",
-      "\t\u001b[31msrc/data/.ipynb_checkpoints/\u001b[m\n",
-      "\t\u001b[31msrc/data/__pycache__/__init__.cpython-36.pyc\u001b[m\n",
-      "\t\u001b[31msrc/data/__pycache__/format_cea_data.cpython-36.pyc\u001b[m\n",
-      "\t\u001b[31msrc/training/.ipynb_checkpoints/\u001b[m\n",
-      "\t\u001b[31msrc/training/__pycache__/__init__.cpython-36.pyc\u001b[m\n",
-      "\t\u001b[31msrc/training/__pycache__/model_training.cpython-36.pyc\u001b[m\n",
-      "\t\u001b[31msrc/training/__pycache__/neural_models.cpython-36.pyc\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+      "\t\u001b[32mnew file:   .ipynb_checkpoints/Untitled-Copy1-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[32mmodified:   .ipynb_checkpoints/Untitled-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[32mnew file:   .ipynb_checkpoints/evaluate-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[32mnew file:   Untitled-Copy1.ipynb\u001b[m\n",
+      "\t\u001b[32mmodified:   Untitled.ipynb\u001b[m\n",
+      "\t\u001b[32mnew file:   evaluate.ipynb\u001b[m\n",
+      "\t\u001b[32mmodified:   src/.ipynb_checkpoints/main-checkpoint.py\u001b[m\n",
+      "\t\u001b[32mmodified:   src/data/__pycache__/format_cea_data.cpython-36.pyc\u001b[m\n",
+      "\t\u001b[32mmodified:   src/main.py\u001b[m\n",
+      "\t\u001b[32mmodified:   src/training/.ipynb_checkpoints/model_training-checkpoint.py\u001b[m\n",
+      "\t\u001b[32mmodified:   src/training/.ipynb_checkpoints/neural_models-checkpoint.py\u001b[m\n",
+      "\t\u001b[32mmodified:   src/training/__pycache__/model_training.cpython-36.pyc\u001b[m\n",
+      "\t\u001b[32mmodified:   src/training/__pycache__/neural_models.cpython-36.pyc\u001b[m\n",
+      "\t\u001b[32mmodified:   src/training/model_training.py\u001b[m\n",
+      "\t\u001b[32mmodified:   src/training/neural_models.py\u001b[m\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "#! git status"
+    "! git status"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ffa7d99f",
+   "id": "e620ad55",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[paper_code 37bd59e] FFT and DCT resolve\n",
-      " Committer: EC2 Default User <ec2-user@ip-172-16-13-213.eu-west-3.compute.internal>\n",
+      "[paper_code e8b5c8c] ConvLSTM model\n",
+      " Committer: EC2 Default User <ec2-user@ip-172-16-74-33.eu-west-3.compute.internal>\n",
       "Your name and email address were configured automatically based\n",
       "on your username and hostname. Please check that they are accurate.\n",
       "You can suppress this message by setting them explicitly:\n",
@@ -100,18 +93,22 @@
       "\n",
       "    git commit --amend --reset-author\n",
       "\n",
-      " 1 file changed, 15 insertions(+), 63 deletions(-)\n"
+      " 15 files changed, 11613 insertions(+), 196 deletions(-)\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled-Copy1-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/evaluate-checkpoint.ipynb\n",
+      " create mode 100644 Untitled-Copy1.ipynb\n",
+      " create mode 100644 evaluate.ipynb\n"
      ]
     }
    ],
    "source": [
-    "#! git commit -m \"FFT and DCT resolve\""
+    "! git commit -m \"ConvLSTM model\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "90df8f52",
+   "id": "135653b8",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1d261a20",
+   "id": "d8637004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0085fcb",
+   "id": "8df6d0a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5dee646d",
+   "id": "23dcd175",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c87e6ff5",
+   "id": "173279c5",
    "metadata": {},
    "outputs": [],
    "source": []
