--- a/run_and_git_update.ipynb
+++ b/run_and_git_update.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "209a2ff3",
+   "id": "80141ddb",
    "metadata": {},
    "outputs": [
     {
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "423e40c4",
+   "execution_count": 1,
+   "id": "f09347fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "51a1ef62",
+   "execution_count": 2,
+   "id": "751e86c7",
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +47,14 @@
       "Changes to be committed:\n",
       "  (use \"git reset HEAD <file>...\" to unstage)\n",
       "\n",
-      "\t\u001b[32mnew file:   .ipynb_checkpoints/Untitled-Copy1-checkpoint.ipynb\u001b[m\n",
-      "\t\u001b[32mmodified:   .ipynb_checkpoints/Untitled-checkpoint.ipynb\u001b[m\n",
-      "\t\u001b[32mnew file:   .ipynb_checkpoints/evaluate-checkpoint.ipynb\u001b[m\n",
-      "\t\u001b[32mnew file:   Untitled-Copy1.ipynb\u001b[m\n",
-      "\t\u001b[32mmodified:   Untitled.ipynb\u001b[m\n",
-      "\t\u001b[32mnew file:   evaluate.ipynb\u001b[m\n",
+      "\t\u001b[32mdeleted:    .ipynb_checkpoints/Untitled-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[32mmodified:   .ipynb_checkpoints/evaluate-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[32mrenamed:    .ipynb_checkpoints/Untitled-Copy1-checkpoint.ipynb -> .ipynb_checkpoints/run_and_git_update-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[32mdeleted:    Untitled.ipynb\u001b[m\n",
+      "\t\u001b[32mmodified:   evaluate.ipynb\u001b[m\n",
+      "\t\u001b[32mrenamed:    Untitled-Copy1.ipynb -> run_and_git_update.ipynb\u001b[m\n",
       "\t\u001b[32mmodified:   src/.ipynb_checkpoints/main-checkpoint.py\u001b[m\n",
-      "\t\u001b[32mmodified:   src/data/__pycache__/format_cea_data.cpython-36.pyc\u001b[m\n",
+      "\t\u001b[32mnew file:   src/data/.ipynb_checkpoints/transform_cea_data-checkpoint.py\u001b[m\n",
       "\t\u001b[32mmodified:   src/main.py\u001b[m\n",
       "\t\u001b[32mmodified:   src/training/.ipynb_checkpoints/model_training-checkpoint.py\u001b[m\n",
       "\t\u001b[32mmodified:   src/training/.ipynb_checkpoints/neural_models-checkpoint.py\u001b[m\n",
@@ -62,6 +62,12 @@
       "\t\u001b[32mmodified:   src/training/__pycache__/neural_models.cpython-36.pyc\u001b[m\n",
       "\t\u001b[32mmodified:   src/training/model_training.py\u001b[m\n",
       "\t\u001b[32mmodified:   src/training/neural_models.py\u001b[m\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\t\u001b[31mmodified:   run_and_git_update.ipynb\u001b[m\n",
       "\n"
      ]
     }
@@ -72,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e620ad55",
+   "execution_count": 3,
+   "id": "bcc31f5e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[paper_code e8b5c8c] ConvLSTM model\n",
-      " Committer: EC2 Default User <ec2-user@ip-172-16-74-33.eu-west-3.compute.internal>\n",
+      "[paper_code d46e692] paper submission\n",
+      " Committer: EC2 Default User <ec2-user@ip-172-16-84-137.eu-west-3.compute.internal>\n",
       "Your name and email address were configured automatically based\n",
       "on your username and hostname. Please check that they are accurate.\n",
       "You can suppress this message by setting them explicitly:\n",
@@ -93,137 +99,45 @@
       "\n",
       "    git commit --amend --reset-author\n",
       "\n",
-      " 15 files changed, 11613 insertions(+), 196 deletions(-)\n",
-      " create mode 100644 .ipynb_checkpoints/Untitled-Copy1-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/evaluate-checkpoint.ipynb\n",
-      " create mode 100644 Untitled-Copy1.ipynb\n",
-      " create mode 100644 evaluate.ipynb\n"
+      " 15 files changed, 10904 insertions(+), 11004 deletions(-)\n",
+      " delete mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
+      " rewrite .ipynb_checkpoints/evaluate-checkpoint.ipynb (86%)\n",
+      " rename .ipynb_checkpoints/{Untitled-Copy1-checkpoint.ipynb => run_and_git_update-checkpoint.ipynb} (100%)\n",
+      " delete mode 100644 Untitled.ipynb\n",
+      " rewrite evaluate.ipynb (90%)\n",
+      " rename Untitled-Copy1.ipynb => run_and_git_update.ipynb (92%)\n",
+      " create mode 100644 src/data/.ipynb_checkpoints/transform_cea_data-checkpoint.py\n"
      ]
     }
    ],
    "source": [
-    "! git commit -m \"ConvLSTM model\""
+    "! git commit -m \"paper submission\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "135653b8",
+   "execution_count": 6,
+   "id": "52ba1fa4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from -r requirements.txt (line 1)) (1.1.5)\n",
-      "Requirement already satisfied: scipy in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from -r requirements.txt (line 2)) (1.5.3)\n",
-      "Requirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from -r requirements.txt (line 3)) (1.19.5)\n",
-      "Collecting tensorflow\n",
-      "  Downloading tensorflow-2.6.0-cp36-cp36m-manylinux2010_x86_64.whl (458.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 458.3 MB 8.1 kB/s  eta 0:00:01    |█                               | 14.2 MB 16.3 MB/s eta 0:00:28     |███████████▍                    | 162.5 MB 71.6 MB/s eta 0:00:05███████████████▉                | 226.8 MB 999 kB/s eta 0:03:52     |████████████████████████████▊   | 411.2 MB 310 kB/s eta 0:02:32\n",
-      "\u001b[?25hRequirement already satisfied: scikit-learn in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from -r requirements.txt (line 5)) (0.24.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pandas->-r requirements.txt (line 1)) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pandas->-r requirements.txt (line 1)) (2021.1)\n",
-      "Collecting tensorflow-estimator~=2.6\n",
-      "  Downloading tensorflow_estimator-2.6.0-py2.py3-none-any.whl (462 kB)\n",
-      "\u001b[K     |████████████████████████████████| 462 kB 66.8 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: google-pasta~=0.2 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorflow->-r requirements.txt (line 4)) (0.2.0)\n",
-      "Collecting astunparse~=1.6.3\n",
-      "  Downloading astunparse-1.6.3-py2.py3-none-any.whl (12 kB)\n",
-      "Collecting termcolor~=1.1.0\n",
-      "  Downloading termcolor-1.1.0.tar.gz (3.9 kB)\n",
-      "Requirement already satisfied: protobuf>=3.9.2 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorflow->-r requirements.txt (line 4)) (3.15.2)\n",
-      "Collecting clang~=5.0\n",
-      "  Downloading clang-5.0.tar.gz (30 kB)\n",
-      "Collecting opt-einsum~=3.3.0\n",
-      "  Downloading opt_einsum-3.3.0-py3-none-any.whl (65 kB)\n",
-      "\u001b[K     |████████████████████████████████| 65 kB 7.3 MB/s  eta 0:00:01\n",
-      "\u001b[?25hCollecting tensorboard~=2.6\n",
-      "  Downloading tensorboard-2.7.0-py3-none-any.whl (5.8 MB)\n",
-      "\u001b[K     |████████████████████████████████| 5.8 MB 67.6 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting keras~=2.6\n",
-      "  Downloading keras-2.6.0-py2.py3-none-any.whl (1.3 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.3 MB 50.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: six~=1.15.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorflow->-r requirements.txt (line 4)) (1.15.0)\n",
-      "Collecting flatbuffers~=1.12.0\n",
-      "  Downloading flatbuffers-1.12-py2.py3-none-any.whl (15 kB)\n",
-      "Requirement already satisfied: wheel~=0.35 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorflow->-r requirements.txt (line 4)) (0.36.2)\n",
-      "Requirement already satisfied: wrapt~=1.12.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorflow->-r requirements.txt (line 4)) (1.12.1)\n",
-      "Collecting keras-preprocessing~=1.1.2\n",
-      "  Downloading Keras_Preprocessing-1.1.2-py2.py3-none-any.whl (42 kB)\n",
-      "\u001b[K     |████████████████████████████████| 42 kB 2.1 MB/s  eta 0:00:01\n",
-      "\u001b[?25hCollecting gast==0.4.0\n",
-      "  Downloading gast-0.4.0-py3-none-any.whl (9.8 kB)\n",
-      "Collecting grpcio<2.0,>=1.37.0\n",
-      "  Downloading grpcio-1.41.0-cp36-cp36m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.9 MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.9 MB 68.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting typing-extensions~=3.7.4\n",
-      "  Downloading typing_extensions-3.7.4.3-py3-none-any.whl (22 kB)\n",
-      "Requirement already satisfied: h5py~=3.1.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorflow->-r requirements.txt (line 4)) (3.1.0)\n",
-      "Collecting absl-py~=0.10\n",
-      "  Downloading absl_py-0.14.1-py3-none-any.whl (131 kB)\n",
-      "\u001b[K     |████████████████████████████████| 131 kB 70.2 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: joblib>=0.11 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from scikit-learn->-r requirements.txt (line 5)) (1.0.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from scikit-learn->-r requirements.txt (line 5)) (2.1.0)\n",
-      "Requirement already satisfied: cached-property in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from h5py~=3.1.0->tensorflow->-r requirements.txt (line 4)) (1.5.1)\n",
-      "Collecting google-auth-oauthlib<0.5,>=0.4.1\n",
-      "  Downloading google_auth_oauthlib-0.4.6-py2.py3-none-any.whl (18 kB)\n",
-      "Collecting google-auth<3,>=1.6.3\n",
-      "  Downloading google_auth-2.3.0-py2.py3-none-any.whl (154 kB)\n",
-      "\u001b[K     |████████████████████████████████| 154 kB 68.0 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: werkzeug>=0.11.15 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (1.0.1)\n",
-      "Collecting tensorboard-data-server<0.7.0,>=0.6.0\n",
-      "  Downloading tensorboard_data_server-0.6.1-py3-none-manylinux2010_x86_64.whl (4.9 MB)\n",
-      "\u001b[K     |████████████████████████████████| 4.9 MB 55.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: setuptools>=41.0.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (49.6.0.post20210108)\n",
-      "Requirement already satisfied: requests<3,>=2.21.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (2.26.0)\n",
-      "Collecting tensorboard-plugin-wit>=1.6.0\n",
-      "  Downloading tensorboard_plugin_wit-1.8.0-py3-none-any.whl (781 kB)\n",
-      "\u001b[K     |████████████████████████████████| 781 kB 67.2 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting markdown>=2.6.8\n",
-      "  Downloading Markdown-3.3.4-py3-none-any.whl (97 kB)\n",
-      "\u001b[K     |████████████████████████████████| 97 kB 11.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting cachetools<5.0,>=2.0.0\n",
-      "  Downloading cachetools-4.2.4-py3-none-any.whl (10 kB)\n",
-      "Collecting pyasn1-modules>=0.2.1\n",
-      "  Downloading pyasn1_modules-0.2.8-py2.py3-none-any.whl (155 kB)\n",
-      "\u001b[K     |████████████████████████████████| 155 kB 68.5 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: rsa<5,>=3.1.4 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (4.7.2)\n",
-      "Collecting requests-oauthlib>=0.7.0\n",
-      "  Downloading requests_oauthlib-1.3.0-py2.py3-none-any.whl (23 kB)\n",
-      "Requirement already satisfied: importlib-metadata in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from markdown>=2.6.8->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (3.7.0)\n",
-      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (0.4.8)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (2.0.6)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (1.26.6)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (3.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (2021.5.30)\n",
-      "Collecting oauthlib>=3.0.0\n",
-      "  Downloading oauthlib-3.1.1-py2.py3-none-any.whl (146 kB)\n",
-      "\u001b[K     |████████████████████████████████| 146 kB 70.7 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: zipp>=0.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from importlib-metadata->markdown>=2.6.8->tensorboard~=2.6->tensorflow->-r requirements.txt (line 4)) (3.4.0)\n",
-      "Building wheels for collected packages: clang, termcolor\n",
-      "  Building wheel for clang (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for clang: filename=clang-5.0-py3-none-any.whl size=30702 sha256=61a7add4376769ac4607643835a5100e4b0d9ae83d7084bc2d35ce0748463617\n",
-      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/22/4c/94/0583f60c9c5b6024ed64f290cb2d43b06bb4f75577dc3c93a7\n",
-      "  Building wheel for termcolor (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for termcolor: filename=termcolor-1.1.0-py3-none-any.whl size=4829 sha256=72c84e06cac4833d28f2f57291a388641696ee84bc2fa10087753ef805b2e3fd\n",
-      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/93/2a/eb/e58dbcbc963549ee4f065ff80a59f274cc7210b6eab962acdc\n",
-      "Successfully built clang termcolor\n",
-      "Installing collected packages: typing-extensions, pyasn1-modules, oauthlib, cachetools, requests-oauthlib, google-auth, tensorboard-plugin-wit, tensorboard-data-server, markdown, grpcio, google-auth-oauthlib, absl-py, termcolor, tensorflow-estimator, tensorboard, opt-einsum, keras-preprocessing, keras, gast, flatbuffers, clang, astunparse, tensorflow\n",
-      "  Attempting uninstall: typing-extensions\n",
-      "    Found existing installation: typing-extensions 3.10.0.2\n",
-      "    Uninstalling typing-extensions-3.10.0.2:\n",
-      "      Successfully uninstalled typing-extensions-3.10.0.2\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "pylint 2.11.1 requires typing-extensions>=3.10.0; python_version < \"3.10\", but you have typing-extensions 3.7.4.3 which is incompatible.\n",
-      "astroid 2.8.0 requires typing-extensions>=3.10; python_version < \"3.10\", but you have typing-extensions 3.7.4.3 which is incompatible.\n",
-      "aiobotocore 1.3.0 requires botocore<1.20.50,>=1.20.49, but you have botocore 1.21.45 which is incompatible.\u001b[0m\n",
-      "Successfully installed absl-py-0.14.1 astunparse-1.6.3 cachetools-4.2.4 clang-5.0 flatbuffers-1.12 gast-0.4.0 google-auth-2.3.0 google-auth-oauthlib-0.4.6 grpcio-1.41.0 keras-2.6.0 keras-preprocessing-1.1.2 markdown-3.3.4 oauthlib-3.1.1 opt-einsum-3.3.0 pyasn1-modules-0.2.8 requests-oauthlib-1.3.0 tensorboard-2.7.0 tensorboard-data-server-0.6.1 tensorboard-plugin-wit-1.8.0 tensorflow-2.6.0 tensorflow-estimator-2.6.0 termcolor-1.1.0 typing-extensions-3.7.4.3\n",
-      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 21.3 is available.\n",
-      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/python3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+      "Username for 'https://github.com/YounessElMarhraoui/CEA_Data.git': ^C\n"
      ]
     }
    ],
+   "source": [
+    "! git push origin paper_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d50a68f7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "! pip install -r requirements.txt"
    ]
@@ -231,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8637004",
+   "id": "63ea1791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8df6d0a5",
+   "id": "5b7cff71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "23dcd175",
+   "id": "e78e81ed",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173279c5",
+   "id": "e749691c",
    "metadata": {},
    "outputs": [],
    "source": []
